--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -1949,7 +1949,7 @@ GER_expand_fortlines_desc:0 ""
  jak_form_white_guard:0 "Raise the White Guard"
 
  #ITALY
- ITA_caesar:0 ""
+ ITA_caesar:0 "Call Caesar"
  ITA_caesar_desc:0 ""
 
  
