--- a/localisation/english/nsb_characters_l_english.yml
+++ b/localisation/english/nsb_characters_l_english.yml
@@ -529,7 +529,7 @@
  ENG_alan_turing:0 "$eng_alan_turing$"
 
  #GERMANY
- GER_adolf_hitler:0 "Adolf Hitler"
+ GER_adolf_hitler:0 "Maho Nishizumi"
  GER_konrad_adenauer:0 "Konrad Adenauer"
  GER_wilhelm_pieck:0 "Wilhelm Pieck"
  GER_gerd_von_rundstedt:0 "$gerd_von_rundstedt$"
