--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1,11 +1,11 @@
 ﻿l_english:
  #NEW IDEOLOGIES AND PARTIES
  FIN_neutrality_party:1 "Mikaliitto"
- FIN_democratic_party:0 "Jatkosotan Demokraattinen Puolue"
+ FIN_democratic_party:0 "JDP"
  FIN_democratic_party_long:0 "Jatkosotan Demokraattinen Puolue"
- FIN_fascism_party:0 "Mikkon Ihmisten Kansanliike"
+ FIN_fascism_party:0 "MIK"
  FIN_fascism_party_long:0 "Mikkon Ihmisten Kansanliike"
- FIN_communism_party:0 "Jatkosotan Kommunistinen Puolue"
+ FIN_communism_party:0 "JKP"
  FIN_communism_party_long:0 "Jatkosotan Kommunistinen Puolue"
  FRA_communism_party:0 "Partie d'Examen"
  FRA_democratic_party:0 "Parti Escalator de Marie"
@@ -30,9 +30,9 @@
  british_idealism4:0 "British Idealism"
  british_idealism4_desc:0 "St.Gloriana is well-known for its unique Sensha-Do style of elegance and order. Darjeeling, its commander, prides herself on alledgedly never spilling her tea, regardless of circumstances. Considered to be amongst the Sensha-Do powerhouses, any school fighting against St.Gloriana should proceed with caution."
  GER_fascism_party:0 "Nishizumi Partei"
- GER_communism_party:0 "Schwarzwaldspitzen Sozialistische Partei"
+ GER_communism_party:0 "SSP"
  GER_communism_party_long:0 "Schwarzwaldspitzen Sozialistische Partei"
- GER_democratic_party:0 "Schwarzwaldspitzen Demokratische Partei"
+ GER_democratic_party:0 "SDP"
  GER_democratic_party_long: "Schwarzwaldspitzen Demokratische Partei"
  GER_neutrality_party_civil_war:0 "Koume Militärregierung"
  GER_neutrality_party_kaiserreich:0 "Koumerimine Partei"
