forest stuff finland

--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -1750,7 +1750,7 @@ GER_expand_fortlines_desc:0 ""
  FIN_war_dictatorship_desc:0 "Mika has proven to be the most capable of us to lead Jatkosota to a better future, so it is wise to let her be the one who leads us in these times."
  
  FIN_end_with_the_nazism:0 "End With The Black Forest"
- FIN_end_with_the_nazism_desc:0 ""
+ FIN_end_with_the_nazism_desc:0 "Kuromormine has continued its decent into madness, despite our attempts to temper their ambitions its clear they are only in it for themselves, its time to stop using this bridge before we are forever tied to them, we will be ending our join military cooperation with them and begin seeking other allies"
  
  FIN_integrate_white_guard:0 "Integrate White Guard"
  FIN_integrate_white_guard_desc:0 "The White Guard are those brave men that want to fight the reds and the enemies of Jatkosota; however, they have paramilitary restrictions. To address this, we shall integrate them into the army so they can give the best of themselves for Jatkosota."
