da yoinky sploinky

--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -1950,6 +1950,6 @@ GER_expand_fortlines_desc:0 ""
 
  #ITALY
  ITA_caesar:0 "Call Caesar"
- ITA_caesar_desc:0 ""
+ ITA_caesar_desc:0 "With the rise of Caesars Good friend Carpaccio as leader of Anzio, Caesar had always planned to go visit her but was always stopped due to work or public duties. However Carpaccio knows her Good friend isn’t the happiest in Ooarahi, but she’s confident that extending a letter to her offering a position in the Anzio army would be able to convince her to move to Anzio and finally reunite with her good friend"
 
  
