--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -344,9 +344,9 @@
  GER_polish_protection_desc:0 "Bonple whilst still maintaining control over some traditional lands of our own, are a major eastern guarantee in checking the power of Pravda. Ensuring their territorial integrity is essential to our own security and that of the security of all of Eastern Europe."
  GER_against_pravda:0 "Against Pravda"
  GER_against_pravda_desc:0 "The one schoool Kuromorimine is becoming increasingly worried about is Pravda and its beligerant leader Kaytusha, Kuromorimine needs to strike first to secure its future where we aren't pushed around."
- GER_repaired_republic:0 "A Republic Restored."
+ GER_repaired_republic:0 "A Republic Restored"
  GER_repaired_republic_desc:0 "Many days we've worked to undo the harm done to our nation, and today it comes to a end. The reforms have been set in stone the parliament building now open to once again house democratic discussion, we are now ready to tackle Europe's issues and will stand strong against tyranny."
- GER_unify_germans:0 "Joining the two Schools"
+ GER_unify_germans:0 "Joining the Two Schools"
  GER_unify_germans_desc:0 "Kuromormine and Ooarai have for many years been deeply linked to one another, both culturally and economically, and while not everyone seeks to see us both unite, doing so would undoubtedly help in ensuring our collective security and prosperity for decades to come, Germans must be united!"
  GER_sudentendland_ask:0 "The Sudentenland Proposal"
  GER_sudentendland_ask_desc:0 "Sudetenland much like ooarahi is culturally linked to our Nation, while The old regime sought to conquer all of Gregor we will instead simply ask for the region to be given to us, or at the very least the region given autonomy, we must not spill yet more blood for our land."
