Finland some minor stuff

--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -1689,9 +1689,9 @@ GER_expand_fortlines_desc:0 ""
  FDR_develop_heavy_industry:0 "Develop Heavy Industry"
  FDR_develop_heavy_industry_desc:0 "With the development of electronics, and the introduction of rare earth metals in industrial work, the demands for our resources grow everyday things like chromium could make us a wonderful amount of capital to help our workers, thus we must invest in their development"
  FDR_prepare_for_war:0 "Prepare for War"
- FDR_prepare_for_war_desc:0 ""
+ FDR_prepare_for_war_desc:0 "With the Revolution at home secured we must prepare to combat countr revolutionary regimes that are seeking to destroy us, we cannot falter in our beliefs we must prepare for war on a truly global scale "
  FDR_develop_faraway_regions:0 "Develop Faraway Regions"
- FDR_develop_faraway_regions_desc:0 ""
+ FDR_develop_faraway_regions_desc:0 "Unlike the decadent west we dont forget the less fortunate the under developed and unconnected regions in Jakatosota, no one shall be left behind by the revolution"
  FDR_north_resourses:0 "Develop North"
  FDR_north_resourses_desc:0 ""
  FDR_war_research:0 "Military Research"
