finnish extra localization commie

--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -1693,9 +1693,9 @@ GER_expand_fortlines_desc:0 ""
  FDR_develop_faraway_regions:0 "Develop Faraway Regions"
  FDR_develop_faraway_regions_desc:0 "Unlike the decadent west we dont forget the less fortunate the under developed and unconnected regions in Jakatosota, no one shall be left behind by the revolution"
  FDR_north_resourses:0 "Develop North"
- FDR_north_resourses_desc:0 ""
+ FDR_north_resourses_desc:0 "The nickel mines in Petsamo are a region of significant economical, and strategic value to us, without it we would struggle to fight a war, much less economically prosper we must give it the support it needs, not to mention it would also allow us to further expand the revolution abroad"
  FDR_war_research:0 "Military Research"
- FDR_war_research_desc:0 ""
+ FDR_war_research_desc:0 "With the victory of the revolution, the heroes of such revolution require new weapons to fight the battles that are asked of them on the modern day, the academia must work for the revoultion and the revolution must work for the academia"
  
  FDR_rearmament:0 "Rearmament"
  FDR_rearmament_desc:0 "Jatkosota can't sit around forever, with new threats looming over the horizon, we need to be able to prepare ourselves for conflicts on our borders"
@@ -1708,11 +1708,11 @@ GER_expand_fortlines_desc:0 ""
  FDR_attack_strategy:0 "Aggressive Focus"
  FDR_attack_strategy_desc:0 "Whilst being operationally aggressive is considered unfesible due to the size of the army, we at the very least encourage local aggressive tactics which will maximize enemy casualties, though to bring soldiers up to standards training will need to be very aggressive"
  FDR_north_defense_line:0 "North Defense Line"
- FDR_north_defense_line_desc:0 ""
+ FDR_north_defense_line_desc:0 "The Viggen and Viking Regimes are too deeply entrenched to believe their workers can rise up against them, we must instead ready for their eventual attack to protect the revoultion against their elites attempts to squash it out"
  FDR_sea_defense_line:0 "Sea Defense Line"
  FDR_sea_defense_line_desc:0 ""
  FDR_develop_armor:0 "Develop Armor"
- FDR_develop_armor_desc:0 ""
+ FDR_develop_armor_desc:0 "Despite our best efforts, we cannot do the same as a nation like Turl and have a domestic tank development team, but pravda can provide a excellent template to copy equivelent tank designs"
  FDR_finnish_tank_project:0 "Finnish Tank Projects"
  FDR_finnish_tank_project_desc:0 ""
  FDR_soviet_mission:0 "Pravda Military Mission"
