--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -1681,7 +1681,7 @@ GER_expand_fortlines_desc:0 ""
  FDR_moderate_collectivization:0 "Moderate Collectivization"
  FDR_moderate_collectivization_desc:0 "When has Communism ever failed, THATS RIGHT it never has and shall not, the formation of worker owned collectives which seek to enrich the workers is a top priority, the worker of the world will soon be free"
  FDR_nationalization:0 "Nationalization"
- FDR_nationalization_desc:0 "Foreign firms have been allowed to operate in our lands for far too long, its time to nationalize these companies and give them to the workers, we shall win the battle against capitalism
+ FDR_nationalization_desc:0 "Foreign firms have been allowed to operate in our lands for far too long, its time to nationalize these companies and give them to the workers, we shall win the battle against capitalism"
  FDR_start_industrialization:0 "Start Industrialization"
  FDR_start_industrialization_desc:0 "For the Revolution to survive we must industrialize rapidly, with quotas to keep production up, we can expect a true miracle for the workers of the nation, as everyone works to make a true industrial workers paradise"
  FDR_develop_light_industry:0 "Develop Light Industry"
