--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -1242,18 +1242,18 @@
  ETH:0 "Ethiopia"
  ETH_DEF:0 "Ethiopia"
  ETH_ADJ:0 "Ethiopian"
- SLO_fascism:0 "State of Nitra"
- SLO_fascism_DEF:0 "State of Nitra"
- SLO_democratic:0 "Nitra Republic"
- SLO_democratic_DEF:0 "the Nitra Republic"
- SLO_neutrality:0 "Free State of Nitra"
- SLO_neutrality_DEF:0 "the Free State of Nitra"
- SLO_communism:0 "Nitra Socialist Republic"
- SLO_communism_DEF:0 "the Nitra Socialist Republic"
- SLO_fascism_ADJ:0 "Slovakian"
- SLO_democratic_ADJ:0 "Slovakian"
- SLO_neutrality_ADJ:0 "Slovakian"
- SLO_communism_ADJ:0 "Slovakian"
+ SLO_fascism:0 "State of Lokse"
+ SLO_fascism_DEF:0 "State of Lokse"
+ SLO_democratic:0 "lokse Republic"
+ SLO_democratic_DEF:0 "the Loske Republic"
+ SLO_neutrality:0 "Free State of Lokse"
+ SLO_neutrality_DEF:0 "the Free State of Loske"
+ SLO_communism:0 "Loske Socialist Republic"
+ SLO_communism_DEF:0 "the Loske Socialist Republic"
+ SLO_fascism_ADJ:0 "Loskian"
+ SLO_democratic_ADJ:0 "Loskian"
+ SLO_neutrality_ADJ:0 "Loskian"
+ SLO_communism_ADJ:0 "Loskian"
  SLO:0 "Slovakia"
  SLO_DEF:0 "Slovakia"
  SLO_ADJ:0 "Slovakian"
