--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -733,11 +733,11 @@
  HOL_benelux_unified_democratic:0 "Benelux Federation"
  HOL_benelux_unified_democratic_DEF:0 "the Benelux Federation"
  HOL_benelux_unified_democratic_ADJ:0 "Benelux"
- SPA_directory_fascism:0 "Spanish Directory"
- SPA_directory_fascism_DEF:0 "the Spanish Directory"
- SPA_directory_fascism_ADJ:0 "Spanish"
- SPA_directory_neutrality:0 "Spanish Directory"
- SPA_directory_neutrality_DEF:0 "the Spanish Directory"
+ SPA_directory_fascism:0 "Blue Directory"
+ SPA_directory_fascism_DEF:0 "the Blue Directory"
+ SPA_directory_fascism_ADJ:0 "Blue"
+ SPA_directory_neutrality:0 "Blue Directory"
+ SPA_directory_neutrality_DEF:0 "the Blue Directory"
  SPA_directory_neutrality_ADJ:0 "Spanish"
  SPR_anarchist_aragon_neutrality:0 "Regional Defense Council of Aragón"
  SPR_anarchist_aragon_neutrality_DEF:0 "the Regional Defense Council of Aragón"
@@ -754,23 +754,23 @@
  SPR_nationalist_spain_fascism:1 "Blue Division"
  SPR_nationalist_spain_fascism_def:1 "Blue Division"
  SPR_nationalist_spain_fascism_adj:0 "Blue Division"
- SPR_carlist_spain_neutrality:0 "Carlist Spain"
- SPR_carlist_spain_neutrality_def:0 "Carlist Spain"
+ SPR_carlist_spain_neutrality:0 "Carlist Blue"
+ SPR_carlist_spain_neutrality_def:0 "Carlist Blue"
  SPR_carlist_spain_neutrality_adj:0 "Spanish"
  SPR_anarchist_spain_neutrality:0 "Regional Defense Council of Aragón"
  SPR_anarchist_spain_neutrality_def:0 "the Regional Defense Council of Aragón"
  SPR_anarchist_spain_neutrality_adj:1 "Aragonese Anarchist"
- SPR_anarchist_spain_communism:0 "Spanish Commune"
- SPR_anarchist_spain_communism_def:0 "the Spanish Commune"
+ SPR_anarchist_spain_communism:0 "Red Commune"
+ SPR_anarchist_spain_communism_def:0 "the Red Commune"
  SPR_anarchist_spain_communism_adj:0 "Spanish"
- SPR_republican_spain_democratic:0 "Spain"
- SPR_republican_spain_democratic_def:0 "Spain"
+ SPR_republican_spain_democratic:0 "Red"
+ SPR_republican_spain_democratic_def:0 "Red"
  SPR_republican_spain_democratic_adj:0 "Spanish"
- SPR_republican_spain_communism:0 "People's Republic of Spain"
- SPR_republican_spain_communism_def:0 "the People's Republic of Spain"
+ SPR_republican_spain_communism:0 "People's Republic of Red Divison"
+ SPR_republican_spain_communism_def:0 "the People's Republic of Red Divison"
  SPR_republican_spain_communism_adj:0 "Spanish"
- SPB_kingdom_neutrality:0 "Kingdom of Spain"
- SPB_kingdom_neutrality_def:0 "the Kingdom of Spain"
+ SPB_kingdom_neutrality:0 "Kingdom of Blue"
+ SPB_kingdom_neutrality_def:0 "the Kingdom of Blue"
  SPB_kingdom_neutrality_adj:0 "Spanish"
  SPA_spanish_empire_fascism:0 "Spanish Empire"
  SPA_spanish_empire_fascism_def:0 "the Spanish Empire"
