--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -532,6 +532,7 @@
  CHI_JAP_fascism_autonomy_wtt_imperial_associate_DEF:0 "the Chinese Constitutional Republic"
  GER_provisional_gvt_neutrality:0 "Kuromorimine Military Junta"
  GER_provisional_gvt_democratic:0 "Kuromorimine Transitional Government"
+ GER_bellwall_gvt_democratic:0 "Kuromorimine Bellwall Government"
  GER_german_empire_neutrality:0 "Kuromorimine Empire"
  GER_german_empire_neutrality_DEF:0 "Kuromoriminen Empire"
  GER_german_monarchy_democratic:0 "Kuromorimine"
@@ -763,8 +764,8 @@
  SPR_anarchist_spain_communism:0 "Red Commune"
  SPR_anarchist_spain_communism_def:0 "the Red Commune"
  SPR_anarchist_spain_communism_adj:0 "Spanish"
- SPR_republican_spain_democratic:0 "Red"
- SPR_republican_spain_democratic_def:0 "Red"
+ SPR_republican_spain_democratic:0 "Red Division"
+ SPR_republican_spain_democratic_def:0 "Red Division"
  SPR_republican_spain_democratic_adj:0 "Spanish"
  SPR_republican_spain_communism:0 "People's Republic of Red Divison"
  SPR_republican_spain_communism_def:0 "the People's Republic of Red Divison"
