icons and a few fix

--- a/localisation/english/focus_l_english.yml
+++ b/localisation/english/focus_l_english.yml
@@ -390,7 +390,7 @@
  GER_soviet_threat_desc:0 "Pravda is a threat to all of the East and western nations, its corruption cannot be allowed to spread. The Baltics, Jatkosota, Bonple, and Count all know that if they do nothing Pravda will seek to conquer them all, we must make upmost haste to prevent this inevitability."
  GER_protect_baltics:0 "Secure Baltic Security"
  GER_protect_baltics_desc:0 "The Baltic states are the most vulnerable to soviet plans, both Lithuania and Estonia are diplomatically isolated, and whilst Latvia has good relations with Bonple, they will likely be unable to count on them to defend them completely, this is our moment to step in and fill the gaps left by the western allies, by ensuring their independence."
- GER_protect_poland:0 "Protect the Boar"
+ GER_protect_poland:0 "Bonple Protection Plan"
  GER_protect_poland_desc:0 "Bonple is a major player in the east, having a sizeable population, and being a major check against Pravdan power, if we do nothing they could very well be simply overrun with enough time, we must give them the utmost support if we are to ensure they remain more than a puppet of Pravda."
  GER_rally_west:0 "Rally Anti-Pravdan sentiment in the West"
  GER_rally_west_desc:0 "Only by presenting a unified front to the Pravdan menace can we hope to survive, we need the west to back our motions into Pravda or we could very well be partitioned between the two, a unacceptable occurrence"
