--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -514,11 +514,11 @@ GER_against_tyranny:0 "The Great Crusade"
 GER_against_tyranny_desc:0 "Its clear, that standing by isnt acceptable we must act now, we must preemptively destroy these dictatorships to be truly safe"
 GER_peace_our_time:0 "Peace in our Time"
 GER_peace_our_time_desc:0 "With many of the greatest threats to democracy, there shall truly be peace in our time, and perhaps forever"
-GER_prepare_italian_invasion:0 "Ready the Oven"
+GER_prepare_italian_invasion:0 "Kuromorimine Claims in Anzio"
 GER_prepare_italian_invasion_desc:0 "Anzio has the most disturbing form of authoritarianism, while we are confident that they would fall quickly, one must not be lulled in by false security"
-GER_partition_italy:0 "Put In the Pizza"
+GER_partition_italy:0 "Splitting Italy?"
 GER_partition_italy_desc:0 "Anzio is far to large for its own good, the fact is it should not control several parts of land, and should be brought down a peg only then can they be a true democracy"
-GER_war_italy:0 "Cook the Pizza"
+GER_war_italy:0 "The Ultimatum"
 GER_war_italy_desc:0 "Anzio will be brought under proper adminstration, and it will unfortuantly require violence to accomplish, but victory requires sacrifice."
 GER_miho_victory:0 "Miho's Victory"
 GER_miho_victory_desc:0 "Miho is the only person who can save our nations democracy"
