--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -669,16 +669,16 @@
  PAK_neutrality_party:0 "Muslim League"
  PRC_democratic_party:0 "KMT-RC"
  PRC_democratic_party_long:0 "Kuomintang Revolutionary Committee"
- PRC_communism_party:0 "CPC"
- PRC_communism_party_long:0 "Communist Party of China"
+ PRC_communism_party:0 "CPZ"
+ PRC_communism_party_long:0 "Communist Party of Zhongguo"
  SHX_neutrality_party:0 "Kuomintang"
- SHX_communism_party:0 "CPC"
- SHX_communism_party_long:0 "Communist Party of China"
+ SHX_communism_party:0 "CPZ"
+ SHX_communism_party_long:0 "Communist Party of Zhongguo"
  GXC_neutrality_party:0 "New Guangxi Clique"
- GXC_communism_party:0 "CPC"
- GXC_communism_party_long:0 "Communist Party of China"
- YUN_communism_party:0 "CPC"
- YUN_communism_party_long:0 "Communist Party of China"
+ GXC_communism_party:0 "CPZ"
+ GXC_communism_party_long:0 "Communist Party of Zhongguo"
+ YUN_communism_party:0 "CPZ"
+ YUN_communism_party_long:0 "Communist Party of Zhongguo"
  MAN_fascism_party:0 "MX"
  MAN_fascism_party_long:0 "Manzhōuguó Xiéhehuì"
  TAH_fascism_party:0 "PaO"
