democratic stuff done

--- a/localisation/english/gup_events_decisions_l_english.yml
+++ b/localisation/english/gup_events_decisions_l_english.yml
@@ -894,6 +894,19 @@
  kmm.242.d:0 "We’ve done it finally after many hard years of constant fighting we’ve at last saved humanity from the tyranny of Authoritarianism, millions are dead and thousands left in misery but we have ensured the evil does not continue and we can finally rest knowing we have made a brighter future for our children. \n \nKuromormine has finally cleansed ourselves of our initial sin and done away with authoritarian rule across the world let us hope our decedents will realize all that was sacrificed for their liberty."
  kmm.242.a:0 "Peace to last 1000 years!"
  
+ kmm.243.t:0 "Sudentland Proposal"
+ kmm.243.d:0 "Despite Our attempts to ensure peace in the region Kuromormine has once again come to our lands regarding the sudentland region, both a military and economically important region in the nation. \n \nAnd whilst we had prepared many messages for this issue they have offered a far more applicable agreement a substantial amount of money, security guarantees and even some resource rights for the region, a fairly good offer though there are many whom think we should never give it up without a fight."
+ kmm.243.a:0 "Agree to the Terms"
+ kmm.243.b:0 "Ready the armed forces we won’t surrender so easily"
+ 
+ kmm.244.t:0 "Gregor cedes the territory"
+ kmm.244.d:0 "Gregor has agreed to our terms"
+ kmm.244.a:0 "Amazing news"
+ 
+ kmm.245.t:0 "Gregor defiant"
+ kmm.245.d:0 "Gregor has rejected our terms."
+ kmm.245.a:0 "prepare for conflict"
+ 
  #####################
  ### NEW DEICSIONS ###
  #####################
