--- a/localisation/english/gup_general_l_english.yml
+++ b/localisation/english/gup_general_l_english.yml
@@ -550,6 +550,23 @@ GER_our_own_way:0 "A United Europe?"
 GER_our_own_way_desc:0 ""
 GER_expand_fortlines:0 "Defense First"
 GER_expand_fortlines_desc:0 ""
+##IDEAS
+GER_bright_future:0 "Bright Future"
+GER_denishizumization:0 "De-Nishizumification"
+GER_anti_corruption_campaign:0 "Anti Corruption Policies"
+GER_damaged_republic:0 "Kuro Republic Memories"
+GER_miho_economics:0 "Miho Economics"
+womens_sufferage:0 "Expanded Student Rights"
+KMM_unique_kuromorimine_goods:0 "Kuromorimine Product Protection Act"
+KMM_consitutional_monarchy:0 "Consitutional Kaiserriech"
+KMM_Kuro_Internal_Security:0 "I.S.B"
+KMM_Kuro_Internal_Security_vanilla:0 "I.S.B"
+KMM_improved_construction_methods:0 "Infrastructure Project Funding"
+GER_well_funded_police:0 "Disciplinary Force"
+KMM_joint_anti_pravada_tactics:0 "Joint Anti-Pravda Command"
+GER_united_europe1:0 "European Diplomacy"
+GER_fortifications:0 "Fortification Efforts"
+KMM_anti_fascism:0 "Anti Nishizumist Propaganda"
  
  ##DISARM IDEAS
  kmm_disarmament1:0 "Heavy Disarmament"
